--- a/README.org
+++ b/README.org
@@ -25,6 +25,13 @@ contenido.
 
 ** Octubre de 2021
 
+*** 23-Oct-21
++ [[https://arxiv.org/abs/2110.09174][A formalisation of abstract argumentation in higher-order logic]]. ~ Alexander Steen, David Fuenmayor. #ITP #IsabelleHOL
++ [[https://static.miraheze.org/isacwiki/f/f2/Mawen-isa.pdf][Towards an accessible mathematics working environment in education]]. ~ K Miesenberger, W Neuper, B Stöger, M Wenzel. #ITP #IsabelleHOL #Math
++ [[https://static.miraheze.org/isacwiki/a/ad/ThEdu21_paper_2.pdf][Make Isabelle accessible!]]. ~ R. Koutny, K. Miesenberger, W. Neuper, B. Stöger. #ITP #IsabelleHOL
++ [[https://hasufell.github.io/posts/2021-10-22-conduit-to-streamly.html][From conduit to streamly]]. ~ Julian Ospald. #Haskell #FunctionalProgramming
++ [[https://serokell.io/blog/learn-from-errors-overlapping-instances][Learn from errors: Overlapping instances]]. ~ Sandeep Chandrika. #Haskell #FunctionalProgramming
+
 *** 22-Oct-21
 + [[https://youtu.be/24DUqFn9jWM][Mathematical Logic, Lecture 11 (Upward Löwenheim-Skolem and expansions by definition)]]. ~ Artem Chernikov (@archernikov). #Logic #Math
 + [[https://www.isa-afp.org/entries/Correctness_Algebras.html][Algebras for iteration, infinite executions and correctness of sequential computations]]. ~ Walter Guttmann. #ITP #IsabelleHOL
