--- a/README.org
+++ b/README.org
@@ -25,6 +25,10 @@ contenido.
 
 ** Octubre de 2021
 
+*** 25-Oct-21
++ [[https://rezigned.com/posts/monad-transformers-1/][Monad transformers – Part 1: An introduction]]. ~ @rezigned. #Haskell #FunctionalProgramming
++ [[https://mariokrenn.wordpress.com/2021/10/24/quantum-physics-in-lean/][Quantum physics in Lean]]. ~ Mario Krenn (@MarioKrenn6240). #ITP #LeanProver #Physics
+
 *** 24-Oct-21
 + [[https://lawrencecpaulson.github.io//2021/10/27/formalisms.html][On logical formalisms]]. ~ Lawrence Paulson. #Logic #ITP
 + [[https://tel.archives-ouvertes.fr/tel-03387912/document][Integrating automated theorem provers in proof assistants]]. ~ Yacine El Haddad. #PhDThesis #ITP #ATP
