--- a/README.org
+++ b/README.org
@@ -25,6 +25,11 @@ contenido.
 
 ** Octubre de 2021
 
+*** 30-Oct-21
++ [[https://books.google.es/books?id=75dKEAAAQBAJ&lpg=PR2&hl=es&pg=PR.2#v=onepage&q&f=true][Modelling puzzles in first order logic]] ~ Adrian Groza. #ATP #Prover9
++ [[https://byorgey.wordpress.com/2021/10/29/competitive-programming-in-haskell-bfs-part-3-implementation-via-hashmap/][Competitive programming in Haskell: BFS, part 3 (implementation via HashMap)]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
++ [[https://www.technologyreview.com/2020/10/30/1011435/ai-fourier-neural-network-cracks-navier-stokes-and-partial-differential-equations][AI has cracked a key mathematical puzzle for understanding our world]]. ~ Karen Hao. #AI #MachineLearning #Math
+
 *** 29-Oct-21
 + [[https://github.com/leanprover-community/mathlib/blob/0cfae438fdb524f4b2b18d5cb3a5db87e2ad84cb/archive/imo/imo2021_q1.lean][Formalization in Lean of IMO 2021 Q1]]. ~ Mantas Bakšys. #ITP #LeanProver #Math #IMO
 + [[https://gaceta.rsme.es/abrir.php?id=1057][Demostración asistida por ordenador]]. ~ Jesús María Aransay Azofra, César Domínguez Pérez. #DAO #IsabelleHOL #Matemáticas
