--- a/README.org
+++ b/README.org
@@ -25,6 +25,11 @@ contenido.
 
 ** Octubre de 2021
 
+*** 31-Oct-21
++ [[https://www.isa-afp.org/entries/X86_Semantics.html?utm_source=dlvr.it&utm_medium=twitter][X86 instruction semantics and basic block symbolic execution (in Isabelle/HOL)]]. ~ Freek Verbeek, Abhijith Bharadwaj, Joshua Bockenek, Ian Roessle, Timmy Weerwag, Binoy Ravindran. #ITP #IsabelleHOL
++ [[https://raw.githubusercontent.com/GiacomoMaletto/RPP/main/Tesi/main.pdf][A formal verification of reversible primitive permutations]]. ~ Giacomo Maletto. #BSc_Thesis #ITP #LeanProver #Logic #Math
++ [[https://plato.stanford.edu/entries/natural-deduction/][#SEP: Natural deduction systems in logic]]. ~ Francis Jeffry Pelletier, Allen Hazen. #Logic
+
 *** 30-Oct-21
 + [[https://books.google.es/books?id=75dKEAAAQBAJ&lpg=PR2&hl=es&pg=PR.2#v=onepage&q&f=true][Modelling puzzles in first order logic]] ~ Adrian Groza. #ATP #Prover9
 + [[https://byorgey.wordpress.com/2021/10/29/competitive-programming-in-haskell-bfs-part-3-implementation-via-hashmap/][Competitive programming in Haskell: BFS, part 3 (implementation via HashMap)]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
