--- a/README.org
+++ b/README.org
@@ -26,6 +26,17 @@ contenido.
 
 ** Noviembre de 2021
 
+*** 04-Nov-21
++ [[https://leanprover-community.github.io/blog/posts/month-in-mathlib-oct-2021/][This month in mathlib (Oct 2021)]]. #ITP #LeanProver #MathLib #Math
++ [[https://www.ps.uni-saarland.de/~lauermann/bachelor/thesis.pdf][A formalization of Kolmogorov complexity in synthetic computability theory]]. ~ Nils Lauermann. #BSc_Thesis #ITP #Coq #CompSci
++ [[https://openscience.ub.uni-mainz.de/bitstream/20.500.12030/6394/1/keidel_sven-modular_specif-20211001142655806.pdf][Modular specification and compositional soundness of abstract interpreters]]. ~ Sven Keidel. #PhD_Thesis #Haskell #FunctionalProgramming
++ [[http://www.prg.nii.ac.jp/projects/biscuits/fifth-workshop/proceedings/paper_7.pdf][Conflict resolution for data updates by multiple bidirectional transformations]]. ~ Mikiya Habu, Soichiro Hidaka. #ITP #Coq
++ [[https://link.springer.com/article/10.1007/s10817-021-09607-x][Predicate transformer semantics for hybrid systems (Verification components for Isabelle/HOL)]]. ~ Jonathan Julián Huerta y Munive, Georg Struth. #ITP #IsabelleHOL
++ [[https://typeable.io/blog/2021-10-18-haskell-tools][7 useful tools written in Haskell]]. ~ Nikolay Rulev. #Haskell #FunctionalProgramming
++ [[https://github.com/svenkeidel/sturdy][Sturdy: a library for developing sound static analyses in Haskell]]. ~ Sven Keidel. #Haskell #FunctionalProgramming
++ [[https://home.ipipan.waw.pl/w.drabent/LOPSTR/1.pdf][It is declarative (On declarative programming in Prolog)]]. ~ Włodzimierz Drabent. #Prolog #LogicProgramming
++ [[https://home.ipipan.waw.pl/w.drabent/LOPSTR/d.pdf][It is declarative (On declarative programming in Prolog) 2nd part]]. ~ Włodzimierz Drabent. #Prolog #LogicProgramming
+
 *** 03-Nov-21
 + [[https://hal.archives-ouvertes.fr/hal-03404668/document][Hydras & Co]].: Formalized mathematics in Coq for inspiration and entertainment. ~ Pierre Castéran, Jérémy Damour, Karl Palmskog, Clément Pit-Claudel, Théo Zimmermann. #ITP #Coq #Math
 + [[https://coq-community.org/hydra-battles/doc/hydras.pdf][Hydras, Ordinals & Co]]. A library in Coq of entertaining formal mathematics. ~ Pierre Castéran. #ITP #Coq #Math
