--- a/README.org
+++ b/README.org
@@ -26,6 +26,11 @@ contenido.
 
 ** Noviembre de 2021
 
+*** 14-Nov-21
++ [[https://drops.dagstuhl.de/opus/volltexte/2019/11086/pdf/LIPIcs-ITP-2019-31.pdf][Verified decision procedures for modal logics]]. ~ Minchao Wu, Rajeev Goré. #ITP #LeanProver #Logic
++ [[https://www.isa-afp.org/entries/PAL.html][Automating public announcement logic and the wise men puzzle in Isabelle/HOL]]. ~ Christoph Benzmüller, Sebastian Reiche. #ITP #IsabelleHOL
++ [[https://www.isa-afp.org/entries/Factor_Algebraic_Polynomial.html][Factorization of polynomials with algebraic coefficients (in Isabelle/HOL)]]. ~ Manuel Eberl, René Thiemann. #ITP #IsabelleHOL #Math
+
 *** 13-Nov-21
 + [[https://studenttheses.uu.nl/bitstream/handle/20.500.12932/201/Thesis_final.pdf][Conditional independence in functional probabilistic programming]]. ~ Wink van Zon. #MSc_Thesis #Haskell #FunctionalProgramming
 + [[https://lawrencecpaulson.github.io/2021/11/10/Axiom_of_Choice.html][The axiom of choice and descriptions]]. ~ Lawrence Paulson. #Logic #Math #IsabelleHOL
