--- a/README.org
+++ b/README.org
@@ -26,6 +26,9 @@ contenido.
 
 ** Noviembre de 2021
 
+*** 18-Nov-21
++ [[https://byorgey.wordpress.com/2021/11/17/competitive-programming-in-haskell-bfs-part-4-implementation-via-stuarray/][Competitive programming in Haskell: BFS, part 4 (implementation via STUArray)]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
+
 *** 17-Nov-21
 + [[https://www.cs.umd.edu/~mwh/papers/Toward_A_Quantum_Programming_Language_for_Higher_Level_Formal_Verification.pdf][Toward a quantum programming language for higher-level formal verification]]. ~ Finn Voichick, Michael Hicks. #ITP #Coq #QuantumProgramming
 + [[https://byorgey.wordpress.com/2021/11/15/competitive-programming-in-haskell-enumeration/][Competitive programming in Haskell: Enumeration]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
