--- a/README.org
+++ b/README.org
@@ -26,6 +26,11 @@ contenido.
 
 ** Noviembre de 2021
 
+*** 26-Nov-21
++ [[https://www.isa-afp.org/browser_info/current/AFP/Van_Emde_Boas_Trees/document.pdf][van Emde Boas trees (in Isabelle/HOL)]]. ~ Thomas Ammer, Peter Lammich. #ITP #IsabelleHOL #Algorithms
++ [[https://www.isa-afp.org/browser_info/current/AFP/SimplifiedOntologicalArgument/document.pdf][Exploring simplified variants of Gödel’s ontological argument in Isabelle/HOL]]. ~ Christoph Benzmüller. #ITP #IsabelleHOL
++ [[https://blog.kalvad.com/haskell-series-part-7/][Haskell series part 7 (This is the seventh article of a series on the functional language Haskell for beginners)]]. ~ Pierre Guillemot (@hnb_02). #Haskell #FunctionalProgramming
+
 *** 25-Nov-21
 + [[https://www.isa-afp.org/browser_info/current/AFP/PAL/outline.pdf][Automating public announcement logic and the wise men puzzle in Isabelle/HOL]]. ~ Christoph Benzmüller, Sebastian Reichie. #ITP #IsabelleHOL
 + [[https://www.isa-afp.org/browser_info/current/AFP/Factor_Algebraic_Polynomial/document.pdf][Factorization of polynomials with algebraic coefficients (in Isabelle/HOL)]]. ~ Manuel Eberl, René Thiemann. #ITP #IsabelleHOL #Math
